AM_CPPFLAGS = $(LIBSDL_CFLAGS) -DHAVE_AUTOVERSION_H

bin_PROGRAMS = maxr

maxr_SOURCES = attackJobs.cpp \
automjobs.cpp \
base.cpp \
buildings.cpp \
clans.cpp \
client.cpp \
clientevents.cpp \
dialog.cpp \
drawingcache.cpp \
events.cpp \
extendedtinyxml.cpp \
files.cpp \
hud.cpp \
input.cpp \
keys.cpp \
language.cpp \
loaddata.cpp \
log.cpp \
main.cpp \
map.cpp \
mapdownload.cpp \
menuevents.cpp \
menuitems.cpp \
menus.cpp \
mouse.cpp \
movejobs.cpp \
mveplayer.cpp \
netmessage.cpp \
network.cpp \
pcx.cpp \
player.cpp \
savegame.cpp \
SDL_flic.c \
server.cpp \
serverevents.cpp \
settings.cpp \
sound.cpp \
tinystr.cpp \
tinyxml.cpp \
tinyxmlerror.cpp \
tinyxmlparser.cpp \
unifonts.cpp \
upgradecalculator.cpp \
vehicles.cpp \
video.cpp

maxr_LDADD = $(SDL_LIBS) $(SDL_MIXER_LIBS) $(SDL_NET_LIBS)

