AM_CPPFLAGS = $(LIBSDL_CFLAGS) $(DWIN) $(DDEDICATED) -DHAVE_AUTOVERSION_H  
bin_PROGRAMS = maxr

maxr_SOURCES = attackJobs.cpp \
automjobs.cpp \
base.cpp \
buildings.cpp \
clans.cpp \
casualtiestracker.cpp \
client.cpp \
clientevents.cpp \
dedicatedserver.cpp \
dialog.cpp \
drawingcache.cpp \
events.cpp \
extendedtinyxml.cpp \
files.cpp \
fxeffects.cpp \
gametimer.cpp \
hud.cpp \
input.cpp \
jobs.cpp \
keys.cpp \
language.cpp \
loaddata.cpp \
log.cpp \
notifications.cpp \
main.cpp \
map.cpp \
mapdownload.cpp \
menuevents.cpp \
menuitems.cpp \
menus.cpp \
mouse.cpp \
movejobs.cpp \
mveplayer.cpp \
netmessage.cpp \
network.cpp \
pcx.cpp \
player.cpp \
savegame.cpp \
servergame.cpp \
SDL_flic.c \
server.cpp \
serverevents.cpp \
settings.cpp \
sound.cpp \
tinyxml2.cpp\
unifonts.cpp \
unit.cpp \
upgradecalculator.cpp \
vehicles.cpp \
video.cpp

maxr_LDADD = $(SDL_LIBS) $(SDL_MIXER_LIBS) $(SDL_NET_LIBS)

